# LangGraph-PodCastAgent

./: .gitignore  pyproject.toml
agent/: .env.example  pyproject.toml
agent/app/core/: config.py
agent/app/db/: session.py
agent/app/db/models/: __init__.py  podcast.py  source.py
agent/app/db/repository/: __init__.py  base_repo.py  podcast_repo.py  source_repo.py
agent/app/schemas/: __init__.py  audio.py  podcast.py  script.py  source.py
notebooks/: .gitignore  01_firecrawl_exploration.ipynb  02_pdf_extraction_testing.ipynb  03_gemini_tts.ipynb  04_dspy_prompt_engineering.ipynb  README.md  setup_notebooks_env.ps1
